packages/ui-library/src/css/inputs.scss
/* ... */
input[type=file] {
    line-height: 1em;
}

@include placeholder-css($color-input-placeholder, normal, 0);

// Input types
.input-text,
.input-textarea,
.input-select,
.input-file-upload,
.input-integer,
.input-radio,
.input-checkbox,
.input-color-picker,
.input-calendar {
    margin: 0 10px 20px 0;

    &:last-child {
        margin-right: 0;
    }
}

.radio-text-input {
    margin: -12px 0 0 32px;
}

.radio-input-link {
    margin: 2px 0 0 32px;
}

.input-select {
    > span {
        line-height: 1em;
        display: block;

        .help-tooltip {
            margin-left: 10px;
        }
        &.inline {
            display: inline-block;
            vertical-align: top;
            line-height: 50px;
            padding-right: 10px;
        }
    }
    .input-container {
        height: $default-input-height;

        .wrapper {
            position: relative;
            clear: both;
            display: block;
            height: $default-input-height;
            overflow: hidden;
            cursor: pointer;
            border: 1px solid $color-input-fill;
            box-sizing: border-box;

            @include border-radius($default-input-border-radius);

            &:after {
                position: absolute;
                content: 'v';
                font-family: $icon-font;
                font-size: 10px;
                text-transform: none;
                right: 10px;
                top: 16px;
                line-height: 1em;
                color: $color-midnight;
                pointer-events: none;
            }

            &__spacer {
                @include text-value;

                padding: 0 25px;
                height: 0;
                display: block;
                visibility: hidden;
            }
        }
    }
    &.no-label {
        .input-container {
            margin: 0;
        }
    }
    &.large {
        .input-container {
            div {
                height: 50px;
                line-height: 50px;
            }
            &:after {
                top: 0;
                line-height: 50px;
            }
        }
    }
    select {
        appearance: none;
        border: 0;
        border-radius: 0;
        color: $color-input-text;
        background-color: $color-input-fill;
        font-size: $default-input-font-size;
        line-height: 20px;
        height: $default-input-height;
        outline: none;
        cursor: pointer;
        padding: 0 40px 0 10px;
        width: 110%;
        @include font-pn-regular;
        text-transform: none;

        @include transition($default-input-transition);

        // IE FIXES
        option {
            &:checked {
                background-color: $color-active-blue-option;
            }
            &:hover {
                background-color: $color-active-blue-option;
                color: $color-white;
            }
        }

        // FF FIXES
        &:-moz-focusring {
            color: transparent;
            text-shadow: 0 0 0 $color-black;
        }
    }
    &.ie9 {
        .input-container {
            .wrapper {
                &:after {
                    content: '';
                }

            }
        }
        select {
            // allow input widths to override
            width: 100%;
            padding-right: 0;
            option {
                &:checked,
                &:hover {
                    background-color: $color-input-fill;
                    color: $color-input-text;
                }
            }
        }
    }
    &.select-filter {
        .input-container {
            .wrapper {
                border: 1px solid $color-rhino;
                select {
                    background: $color-white;
                }
            }
        }
    }
}
/* ... */

